--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
 click==7.1.2
 Flask==1.1.2
 itsdangerous==1.1.0
-Jinja2==2.11.2
+Jinja2==2.11.3
 MarkupSafe==1.1.1
 Werkzeug==1.0.1
+Gunicorn==20.1.0
+numpy==1.21.5
+pandas==1.4.2
+opencv-contrib-python-headless
+wordcloud
+matplotlib
+scikit-learn==1.0.2
+plotly==5.6.0
